# labyrinth

./: .gitignore  CLAUDE.md  README.MD  main.py  pyproject.toml  requirements.txt
labyrinth/: __init__.py  game.py  logging_config.py  narrative.py  replay.py
labyrinth/domain/: archetypes.py  criteria.py  entities.py  grid.py  types.py
labyrinth/engine/: labyrinth.py  reproduce.py  route_resolver.py  turn.py  weed.py
labyrinth/gui/: app.py  civ_palette.py  tab_civs.py  tab_commentary.py  tab_plot.py
labyrinth/persistence/: repo.py  schema.py
labyrinth/strategy/: base.py  empirical.py  epoch_shock.py  gen_alg.py  llm.py  llm_parse.py  llm_prompt.py  route_cache.py
tests/: conftest.py
tests/e2e/: conftest.py  test_simulation_flow.py
tests/integration/: test_five_turns.py
tests/unit/: test_archetypes.py  test_criteria_resolver.py  test_empirical.py  test_epoch_shock.py  test_extinction.py  test_game.py  test_gen_alg_strategy.py  test_grid.py  test_labyrinth.py  test_llm_parse.py  test_llm_strategy.py  test_narrative.py  test_persistence.py  test_reproduce.py  test_route_cache.py  test_route_resolver.py  test_start_conditions.py  test_trip_runner.py  test_turn_context.py  test_turn_routes.py  test_turn_thinking.py  test_weed.py
