[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "labyrinth"
version = "0.1.0"
description = "TCL/TK Python simulation of civilizations competing in a labyrinth"
readme = "README.MD"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.1.0",
    "ollama>=0.3.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["labyrinth*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring OLLAMA and real services",
    "gui: Tkinter E2E tests (require display)",
]
